--- a/index.html
+++ b/index.html
@@ -19,10 +19,21 @@
             </div>
             <!-- Content -->
             <div class="flex flex-col space-y-6">
-                <!-- Label & Description Container -->
+                <!-- Label & Title Container -->
                 <div class="flex flex-col mb-4 space-y-3 text-center md:text-left">
-                    <div class="inline-block px-3 py-1 text-sm text-white bg-black rounded-full">
-                        Free Shipping
+                    <div>
+                        <div class="inline-block px-3 py-1 text-sm text-white bg-black rounded-full">
+                            Free Shipping
+                        </div>
+                    </div>
+                    <!-- Title -->
+                    <div class="max-w-sm text-2xl font-medium">
+                        Razer Kraken Kitty Edt Gaming Headset Quartz
+                    </div>
+                    <!-- Price Container -->
+                    <div class="flex flex-col mb-space-y-3 text-center md:text-left">
+                        <p class="line-through">$799</p>
+                        <p class="text-5xl font-bold">$599</p>
                     </div>
                 </div>
             </div>
