--- a/index.html
+++ b/index.html
@@ -31,9 +31,29 @@
                         Razer Kraken Kitty Edt Gaming Headset Quartz
                     </div>
                     <!-- Price Container -->
-                    <div class="flex flex-col mb-space-y-3 text-center md:text-left">
+                    <div class="flex flex-col mb-4 space-y-3 text-center md:text-left">
                         <p class="line-through">$799</p>
                         <p class="text-5xl font-bold">$599</p>
+                        <p class="text-sm font-light text-gray-400">
+                            This offer is valid until April 3rd or as long as stock lasts!
+                        </p>
+                    </div>
+
+                    <!--Button Group -->
+                    <div class="group">
+                        <button
+                                class="w-full transition-all duration-150 bg-blue-700 text-white border-b-8 border-b-blue-700 rounded-lg group-hover:border-t-8 group-hover:border-b-0 group-hover:bg-blue-700 group-hover:border-t-blue-700 group-hover:shadow-lg">
+                            <div
+                                    class="px-8 py-4 duration-150 bg-blue-500 rounded-lg group-hover:bg-blue-700">
+                                Add to cart
+                            </div>
+                        </button>
+                    </div>
+
+                    <!-- Stock -->
+                    <div class="flex items-center space-x-3 group">
+                        <div class="w-3 h-3 bg-green-400 rounded-full group-hover:animate-ping"></div>
+                        <div class="text-sm">50+ pcs. in stock</div>
                     </div>
                 </div>
             </div>
